--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,57 @@
-# Compiled class file
+### Java ###
 *.class
-
-# Log file
+*.jar
+*.war
+*.ear
+*.nar
+*.zip
+*.tar.gz
 *.log
 
-# BlueJ files
-*.ctxt
+# virtual machine crash logs
+hs_err_pid*
+replay_pid*
+
+# compiled Java bytecode packages
+*.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+### Gradle ###
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### IntelliJ ###
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+# VS Code
+.vscode/
+
+### OS ###
+.DS_Store
+Thumbs.db
+
+### Environment ###
+.env
+.env.*
+
+### Test Reports ###
+test-output/
+*.log
+target/
+
+### Logs ###
+logs/
+*.log
+*.out
+
+### Other ###
+*.swp
+*.swo
