[FIX] 실행 가능한 JAR 파일(app.jar)로 Docker 이미지 빌드 오류 수정
Spring Boot Gradle Plugin 2.5 버전부터, 다음과 같이 두 개의 JAR 파일이 생성됨

프로젝트 이름-버전 - .jar
프로젝트 이름-버전 - plain.jar

plain.jar가 아닌 실행 가능한 JAR을 Docker에 복사하도록 수정됨

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build -x test
 
-      - name: Get built JAR file name
-        id: get-jar
-        run: |
-          echo "JAR_NAME=$(ls build/libs/*.jar | head -n 1)" >> $GITHUB_ENV
+      - name: Set JAR name
+        run: echo "JAR_NAME=build/libs/app.jar" >> $GITHUB_ENV
 
       - name: Docker build & push to Docker Hub
         run: |
