[FEAT] S3 이미지 업로드 기능 추가
.jpg, .jpeg, .png, .webp 중 하나인 이미지 파일의 경우, 업로드 가능하며,
"디렉토리명/파일명_랜덤값" 형태로 s3에 업로드됩니다.

업로드 성공후에는 해당 파일의 퍼블릭 url이 반환됩니다.

--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,21 @@ repositories {
 }
 
 dependencies {
+	// Web & Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// MyBatis & DB
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// AWS SDK
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.660'
+
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 	testImplementation 'org.springframework.security:spring-security-test'
