[REFACTOR] 기존 File(S3)Uploader를 File(S3)Service로 변경하고 테스트
- 기존 File(S3)Uploader 클래스가 delete 기능도 포함하고있어 File(S3)Service로 수정
- 파일사이즈 최대크기 5MB 지정 -> 전역 예외 핸들러 연결
- 빈 Mapper.xml은 myBatis 파싱시 오류남 -> 최소한의 예시 코드만 작성
- resources/static/에 테스트이미지 두고 s3 테스트 수행

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// (임시) 로컬 개발 Oracle JDBC
+	runtimeOnly files('libs/ojdbc17.jar') // libs 폴더에 jar 넣고 로컬로 참조
 }
 
 tasks.named('test') {
