--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,11 @@ dependencies {
     // AWS SDK
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.660'
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
