[FEAT] 마이페이지 API 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,5 +51,7 @@ server:
 
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
 openai:
   api-key: ${OPEN_AI_API_KEY}
