[REFACTOR] 스웨거 CORS 에러 해결

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,3 +55,6 @@ mybatis:
     map-underscore-to-camel-case: true
 openai:
   api-key: ${OPEN_AI_API_KEY}
+
+springdoc:
+  server-url: https://dorakdorak.store
