[REFACTOR] 스웨거 설정 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,5 +56,5 @@ mybatis:
 openai:
   api-key: ${OPEN_AI_API_KEY}
 
-springdoc:
-  server-url: https://dorakdorak.store
+swagger:
+  server-url: ${SWAGGER_SERVER}
