--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,10 @@ dependencies {
     /* SWAGGER */
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
+    /* QR CODE */
+    implementation 'com.google.zxing:core:3.5.1'
+    implementation 'com.google.zxing:javase:3.5.1'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
