--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.oracle.database.security:osdt_core:21.9.0.0'
     implementation 'com.oracle.database.security:osdt_cert:21.9.0.0'
 
+
     // AWS SDK
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.660'
 
@@ -69,6 +70,10 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+
+    /* SWAGGER */
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
     // (임시) 로컬 개발 Oracle JDBC
     runtimeOnly files('libs/ojdbc17.jar') // libs 폴더에 jar 넣고 로컬로 참조
