--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,11 @@ spring:
     redis:
       host: redis
       port: 6379
+
   jwt:
     secret: ${JWT_SECRET_KEY}
+
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -51,5 +54,15 @@ server:
 
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+
+toss:
+  secretKey: ${TOSS_SECRET_KEY}
+
 openai:
   api-key: ${OPEN_AI_API_KEY}
+  dalle-api-key: ${DALLE_AI_API_KEY}
+
+swagger:
+  server-url: ${SWAGGER_SERVER}
