--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,8 @@ jobs:
               -e MAIL_PASSWORD="${{ secrets.MAIL_PASSWORD }}" \
               -e JWT_SECRET_KEY="${{ secrets.JWT_SECRET_KEY }}" \
               -e OPEN_AI_API_KEY="${{ secrets.OPEN_AI_API_KEY }}" \
+              -e TOSS_SECRET_KEY="${{ secrets.TOSS_SECRET_KEY }}" \
+              -e DALLE_AI_API_KEY="${{ secrets.DALLE_AI_API_KEY }}" \
               -e SWAGGER_SERVER="${{ secrets.SWAGGER_SERVER }}" \
               ${{ secrets.DOCKER_USERNAME }}/dorakdorak-backend:latest
 
