--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,7 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 toss:
-  secretKey: ${TOSS_SECRET_KEY}
+  secret-key: ${TOSS_SECRET_KEY}
 
 openai:
   api-key: ${OPEN_AI_API_KEY}
