--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,7 @@ jobs:
             docker rm rabbitmq 2>/dev/null || true
             docker run -d --name rabbitmq --network dorakdorak-network \
               --restart unless-stopped \
+              -e RABBITMQ_VM_MEMORY_HIGH_WATERMARK=0.7 \
               -p 5672:5672 -p 15672:15672 \
               -e RABBITMQ_DEFAULT_USER="${{ secrets.RABBITMQ_USER }}" \
               -e RABBITMQ_DEFAULT_PASS="${{ secrets.RABBITMQ_PASSWORD }}" \
