--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,8 +58,8 @@ jobs:
             docker rm rabbitmq 2>/dev/null || true
             docker run -d --name rabbitmq --network dorakdorak-network \
               --restart unless-stopped \
-              -e RABBITMQ_VM_MEMORY_HIGH_WATERMARK=0.7 \
               -p 5672:5672 -p 15672:15672 \
+              -v /home/ec2-user/rabbitmq-config/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf \
               -e RABBITMQ_DEFAULT_USER="${{ secrets.RABBITMQ_USER }}" \
               -e RABBITMQ_DEFAULT_PASS="${{ secrets.RABBITMQ_PASSWORD }}" \
               rabbitmq:3-management
